--- a/res.qrc
+++ b/res.qrc
@@ -2,10 +2,9 @@
     <qresource prefix="/glsl">
         <file>raytracer.vert</file>
         <file>raytracer.frag</file>
+        <file>raytracer_inline.frag</file>
     </qresource>
     <qresource prefix="/tex">
-        <file>skybox_texture.jpg</file>
         <file>skybox_texture2.jpg</file>
-        <file>Panorama_cube_map.png</file>
     </qresource>
 </RCC>
