--- a/res.qrc
+++ b/res.qrc
@@ -6,5 +6,6 @@
     </qresource>
     <qresource prefix="/tex">
         <file>skybox_texture2.jpg</file>
+        <file>wp.jpeg</file>
     </qresource>
 </RCC>
